--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
-    "prisma": "^6.17.1"
+    "prisma": "^6.17.1",
+    "zod": "^4.1.12"
   }
 }
