refactor: :recycle: update the prisma config to v7

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,18 @@
   "_version": "22.0.0",
 
   "compilerOptions": {
-    "lib": ["es2024", "ESNext.Array", "ESNext.Collection", "ESNext.Iterator"],
-    "module": "nodenext",
-    "target": "es2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
 
+    "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16",
 
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@prisma-client": ["./generated/prisma/client"]
     }
   }
 }
