--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@prisma-client": ["./generated/prisma/client"]
+      "@/prisma-client": ["./generated/prisma/client"]
     }
   }
 }
